# fast-query-parsers

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Cargo.toml  LICENSE  Makefile  README.md  README.rst  benchmarks.py  fast_query_parser.pyi  fast_query_parsers.pyi  pyproject.toml  sonar-project.properties  starlite_http_utils.pyi
.github/workflows/: ci.yaml  ci.yml  docs-preview.yml  publish.yaml  publish.yml  release.yaml
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/reference/: index.rst
docs/reference/python/: benchmarks.rst  fast-query-parsers.rst
docs/reference/rust/: lib.rst  query-string.rst
docs/usage/: index.rst
src/: lib.rs  query_string.rs
tests/: test_parse_qs.py  test_parse_qsl.py  test_qsl_parser.py
