[package]
name = "fast_query_parsers"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
description = "Ultra-fast query string and url-encoded form-data parsers"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/starlite-api/fast-query-parsers"
version = "1.0.1"
edition = "2021"

[lib]
name = "fast_query_parsers"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
pyo3 = { version = "0.19.1", features = ["extension-module", "abi3-py38"] }
pythonize = "0.19.0"
regex = { version = "1.7.0", features = ["perf"] }
rustc-hash = "1.1.0"
serde_json = "1.0.90"
urlencoding = "2.1.2"
