[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[package]
name = "fast_query_parsers"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
description = "Ultra-fast query string and url-encoded form-data parsers"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/litestar-org/fast-query-parsers"
version = "1.0.3"
edition = "2024"

[lib]
name = "fast_query_parsers"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = { version = "0.26.0", features = ["resolve-config"] }

[dependencies]
lazy_static = "1.5.0"
pyo3 = "0.26.0"
pythonize = "0.26.0"
regex = "1.12.2"
rustc-hash = "2.1.1"
serde_json = "1.0.145"
urlencoding = "2.1.3"
