[project]
name = "fast-query-parsers"
dynamic = ["version"]
requires-python = ">=3.7"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
keywords = [
    "query",
    "query string",
    "qs",
    "query parameters",
    "rust",
    "asgi",
    "starlite",
    "litestar",
    "parser",
]

[project.urls]
homepage = "https://github.com/litestar-org/fast-query-parsers"
documentation = "https://github.com/litestar-org/fast-query-parsers/README.md"
repository = "https://github.com/litestar-org/fast-query-parsers"

[dependency-groups]
dev = ["maturin>=1.9.6", "pyperf>=2.8.0", "pytest>=7.4.4", "ruff>=0.14.1"]

[build-system]
requires = ["maturin>=1.9.6,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
exclude = ["**/uv.lock"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003", # flake8-builtins - class attribute {name} is shadowing a python builtin
    "B010", # flake8-bugbear - do not call setattr with a constant attribute value
    "D100", # pydocstyle - missing docstring in public module
    "D101", # pydocstyle - missing docstring in public class
    "D102", # pydocstyle - missing docstring in public method
    "D103", # pydocstyle - missing docstring in public function
    "D104", # pydocstyle - missing docstring in public package
    "D105", # pydocstyle - missing docstring in magic method
    "D106", # pydocstyle - missing docstring in public nested class
    "D107", # pydocstyle - missing docstring in __init__
    "D202", # pydocstyle - no blank lines allowed after function docstring
    "D205", # pydocstyle - 1 blank line required between summary line and description
    "D203", # pydocstyle - incompatible with D211
    "D415", # pydocstyle - first line should end with a period, question mark, or exclamation point
    "N818", # pep8-naming - exception name should be named with an Error suffix
    "S311", # flake8-bandit - Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "S101", # asserts
    "D213", # multiline summary
    "D417",
]
